--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-asgiref==3.9.2
-Django==5.2.6
-sqlparse==0.5.3
-tzdata==2025.2
+comtypes==1.4.10
+gunicorn==23.0.0
+imageio==2.37.0
+lazy_loader==0.4
+networkx==3.5
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+pillow==11.3.0
+pypiwin32==223
+pyttsx3==2.98
+pywin32==310
+scikit-image==0.25.2
+scipy==1.16.1
+tifffile==2025.6.11
